[tool.poetry]
name = "nile-api"
version = "0.1.0"
description = ""
authors = ["Nelu Platonov <nelu.platonov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.3"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^7.1.2"
isort = "^5.10.1"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

